# devlog

./: README.md
2024-06-10/: README.md
2024-06-10/c_sharp_functional_example/functional_example/: Option.cs
2024-06-10/c_sharp_imperative_example/: imperative_example.sln
2024-06-10/c_sharp_imperative_example/imperative_example/: Computer.cs  ComputerExtensions.cs  ComputerGroup.cs  ComputerGroupExtensions.cs
2024-06-10/c_sharp_imperative_example/tests/: Tests.csproj  UnitTest1.cs
2024-06-10/imperative_vs_functional_example/: imperative_vs_functional_example.sln
2024-06-10/imperative_vs_functional_example/Common/: Computer.cs  ComputerGroup.cs
2024-06-10/imperative_vs_functional_example/functional_example/: ComputerExtensions.cs  ComputerGroupExtensions.cs  functional_example.csproj
2024-06-10/imperative_vs_functional_example/imperative_example/: ComputerExtensions.cs  ComputerGroupExtensions.cs
2024-06-10/imperative_vs_functional_example/imperative_tests/: FunctionalTests.cs  ImperativeTests.cs  tests.csproj
2024-06-10/xor_swapping/c_control/: main.c  swap_c_control  swap_c_control_assembly.s
2024-06-10/xor_swapping/c_example/: main.c  swap_c_example  swap_c_example_assembly.s
2024-06-11/: kubernetesNotes.md  kubernetesTutorialCommends.md
2024-06-14/c_static_dynamic_libaries/: c_static_dynamic_libraries.md
2024-06-14/c_static_dynamic_libaries/c_test_lib/: CMakeLists.txt  add_lib_static  main.c
2024-06-14/c_static_dynamic_libaries/c_test_lib/includes/: add_lib.h
2024-06-14/c_static_dynamic_libaries/c_test_lib/src/: add_lib.c
2024-06-17/: rust_bindgen.md
2024-06-17/rust_bindgen/rust_main/: Cargo.toml  build.rs
2024-06-17/rust_bindgen/rust_main/src/: bindings.rs  foo.rs  main.rs
2024-06-19/c_sharp_f_sharp_example/: .gitignore  c_sharp_f_sharp_example.sln
2024-06-19/c_sharp_f_sharp_example/c_sharp/: Class1.cs  c_sharp.csproj
2024-06-19/c_sharp_f_sharp_example/c_sharp_tests/: UnitTest1.cs  c_sharp_tests.csproj
2024-06-19/c_sharp_f_sharp_example/f_sharp/: Library.fs
2024-06-19/c_sharp_f_sharp_example/f_sharp_tests/: Tests.fs  f_sharp_tests.fsproj
2025-01-03/: mosquitto.md
2025-01-10/rust-secrecy/: Cargo.toml
2025-01-10/rust-secrecy/src/: main.rs
2025-02-03/openssl-certs/: openssl-certs.md
2025-02-18/: rust_traits.md
2025-02-18/trait_tests/: Cargo.toml
2025-02-18/trait_tests/src/: main.rs
2025-02-18/trait_tests/src/string_extension/: mod.rs
2025-02-19/closure_1/: Closure.MD
2025-02-19/closure_2/: main.rs
2025-02-25/option_result/src/: main.rs
2025-02-26/rust-grpc/: Cargo.toml
2025-02-26/rust-grpc/client/: Cargo.toml
2025-02-26/rust-grpc/proto/: hello.proto
2025-02-26/rust-grpc/server/: Cargo.toml
2025-02-28/c_lib/: CMakeLists.txt  README.md
2025-02-28/c_lib/.devcontainer/: devcontainer.json
2025-02-28/c_lib/include/: c_add.h
2025-02-28/c_lib/src/: c_add.c
2025-02-28/c_lib/temp/: main.c  test
2025-02-28/language_interop/: README.md
2025-02-28/language_interop/.devcontainer/: Dockerfile  devcontainer.json
2025-02-28/language_interop/c/: README.md
2025-02-28/language_interop/c/c_lib/: CMakeLists.txt  README.md
2025-02-28/language_interop/c/c_lib/include/: c_int_math.h
2025-02-28/language_interop/c/c_lib/src/: c_int_math.c
2025-02-28/language_interop/c/c_lib/tests/unit/: test_c_int_math_lib.c
2025-02-28/language_interop/c/c_main/: CMakeLists.txt  README.md  main.c
2025-02-28/language_interop/cpp/: README.md
2025-02-28/language_interop/cpp/cpp_lib/: CMakeLists.txt  README.md
2025-02-28/language_interop/cpp/cpp_lib/include/: cpp_int_math.h
2025-02-28/language_interop/cpp/cpp_lib/src/: cpp_int_math.cpp
2025-02-28/language_interop/cpp/cpp_lib/tests/unit/: test_cpp_int_math_lib.cpp
2025-02-28/language_interop/cpp/cpp_main/: CMakeLists.txt  README.md  main.cpp
2025-02-28/language_interop/csharp/: README.md
2025-02-28/language_interop/python/: .gitignore  README.md
2025-11-03/f_ptr_madness/: README.md  main.c
2025-11-15/example_comparing_c_python/c/: README.md  main.c
2025-11-15/example_comparing_c_python/python/: README.md  main.py
2025-11-17/extern_example/: README.md  a_thing.c  main.c
2025-11-17/mod_10/: main.c
2025-11-20/shell_injection_example/: Cargo.toml  Dockerfile  README.md
2025-11-20/shell_injection_example/.devcontainer/: Dockerfile  devcontainer.json
2025-11-20/shell_injection_example/src/: main.rs
2025-12-09/: NOTES.md
2025-12-09/coderpad/: README.md
2025-12-09/coderpad/question_8/: README.md  a-main.i  a-main.s  a.out  main.c
2025-12-09/coderpad/question_9/: README.md  a.out  main.c
2025-12-09/gcc_bug/: README.md  gcc_address_sanitizer  gcc_address_sanitizer.s  gcc_good  gcc_good.s  gcc_no_sanitizer  gcc_no_sanitizer.s  gcc_undefined_address_sanitizer  gcc_undefined_address_sanitizer.s  gcc_undefined_sanitizer  gcc_undefined_sanitizer.s  main_bad.c  main_good.c
2025-12-09/gcc_bug/.devcontainer/: Dockerfile  devcontainer.json
2025-12-09/undefined_behaviour/: Makefile  main.c
nandgame/: README.md  status
(+38 files in other folders)
